# PL0Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
homework/: hw001.cpp  hw002.cpp
include/: .token.hpp.swp  easytypes.hpp  preprocess.hpp  token.hpp
include/auc/: all.hpp
include/auc/memory/: memory.hpp
include/auc/utility/: UNUSED.hpp
include/context/: Context.hpp
include/filebuf/: .FileBuf.hpp.swp  FileBuf.hpp
include/lexer/: .WordMap.hpp.swp  WordMap.hpp
include/parser/: HelperFunctions.hpp  Parser.hpp  all.hpp
include/parser/detail/: AssignStmt.hpp  BlockUnit.hpp  CallStmt.hpp  CompoundStmt.hpp  CondStmt.hpp  ConstDeclStmt.hpp  ConstVarDecl.hpp  Expression.hpp  FunctionRefExpression.hpp  IdentRefExpression.hpp  IfStmt.hpp  IntegerLiteral.hpp  MultiplicativeExpression.hpp  ParserBase.hpp  PrimaryExpression.hpp  ProcedureDecl.hpp  ProcedureRefExpression.hpp  ProcedureUnit.hpp  ProgramUnit.hpp  Statement.hpp  UnaryExpression.hpp  VarDecl.hpp  VarDeclStmt.hpp  WhileStmt.hpp
include/symtable/: SymTable.hpp  SymTable_llvm.hpp
include/tokenizer/: .Tokenizer.hpp.swp  Tokenizer.hpp  WordMap.hpp  all.hpp
src/: lexermain.cpp
src/context/: Context.cpp
src/filebuf/: .FileBuf.cpp.swp  FileBuf.cpp
src/lexer/: Lexer.cpp  WordMap.cpp
src/parser/: HelperFunctions.cpp  Parser.cpp
src/parser/detail/: AssignStmt.cpp  BlockUnit.cpp  CallStmt.cpp  CompoundStmt.cpp  CondStmt.cpp  ConstDeclStmt.cpp  ConstVarDecl.cpp  Expression.cpp  FunctionRefExpression.cpp  IdentRefExpression.cpp  IfStmt.cpp  IntegerLiteral.cpp  MultiplicativeExpression.cpp  PrimaryExpression.cpp  ProcedureDecl.cpp  ProcedureRefExpression.cpp  ProcedureUnit.cpp  ProgramUnit.cpp  Statement.cpp  UnaryExpression.cpp  VarDecl.cpp  VarDeclStmt.cpp  WhileStmt.cpp
src/symtable/: SymTable.cpp  SymTable_llvm.cpp
src/tokenizer/: .Tokenizer.cpp.swp  Tokenizer.cpp  WordMap.cpp
test/: .test002_Tokenizer.cpp.swp  test001_FileBuf.cpp  test002_Tokenizer.cpp  test003_Parser.cpp  test004_llvm_generate.cpp
